--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "description": "Just my 2020 AOC repo",
-  "main": "index.js",
-  "module": "main.js",
   "scripts": {
-    "start": "node -r esm main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "jest --watch",
+    "test": "jest"
   },
-  "author": "",
+  "author": "Adam L Barrett",
   "license": "MIT",
   "dependencies": {
     "line-reader": "^0.4.0",
@@ -19,6 +17,13 @@
     "eslint": "^7.14.0",
     "eslint-plugin-unicorn": "^23.0.0",
     "esm": "^3.2.25",
+    "jest": "^26.6.3",
+    "jest-esm-transformer": "^1.0.0",
     "prettier": "^2.2.1"
+  },
+  "jest": {
+    "transform": {
+      "\\.m?jsx?$": "jest-esm-transformer"
+    }
   }
 }
